--- a/MotionEstimation/MotionEstimation_2012.vcxproj
+++ b/MotionEstimation/MotionEstimation_2012.vcxproj
@@ -182,6 +182,7 @@
     <ClCompile Include="..\common\utils.cpp" />
     <ClCompile Include="..\common\yuv_utils.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="ME.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\common\basic.hpp" />
@@ -189,6 +190,7 @@
     <ClInclude Include="..\common\oclobject.hpp" />
     <ClInclude Include="..\common\utils.h" />
     <ClInclude Include="..\common\yuv_utils.h" />
+    <ClInclude Include="ME.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="README.txt" />
