--- a/MotionEstimation/MotionEstimation_2012.vcxproj
+++ b/MotionEstimation/MotionEstimation_2012.vcxproj
@@ -181,8 +181,11 @@
     <ClCompile Include="..\common\oclobject.cpp" />
     <ClCompile Include="..\common\utils.cpp" />
     <ClCompile Include="..\common\yuv_utils.cpp" />
+    <ClCompile Include="compare.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ME.cpp" />
+    <ClCompile Include="pyramid.cpp" />
+    <ClCompile Include="sampling.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\common\basic.hpp" />
